@@ -27,6 +27,7 @@
       <li><a href="selection.html">Rectangular selection support and zooming</a> and <a href="zooming.html">zooming with overview</a></li> (both with selection plugin)
       <li><a href="interacting.html">Interacting with the data points</a></li>
       <li><a href="navigate.html">Panning and zooming</a> (with navigation plugin)</li>
+      <li><a href="resize.html">Automatically redraw when window is resized</a> (with resize plugin)</li>
     </ul>
 
     <p>Various features:</p>
